# VentureViz

./: Dockerfile
backend/: manage.py  requirements.txt
backend/analyzer/: admin.py  apps.py  authentication.py  models.py  tests.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: base.py  production.py
crewai/: pyproject.toml
crewai/src/ventureviz/: crew.py  main.py
crewai/src/ventureviz/config/: agents.yaml  tasks.yaml
crewai/src/ventureviz/tools/: enrich_company_tool.py
frontend/src/app/: page.tsx
