[project]
name = "ventureviz"
version = "0.1.0"
description = "VentureViz using crewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
ventureviz = "ventureviz.main:run"
run_crew = "ventureviz.main:run"
train = "ventureviz.main:train"
replay = "ventureviz.main:replay"
test = "ventureviz.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"